--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.0",
     "mpesa-node": "^0.1.3",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.4.17",
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "sequelize": "^5.21.4",
